--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <title>B CHAT App</title>
 </head>
 
-<body>
+<body class="overflow-hidden">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
