--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
- 
+
 
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/fontawesome/fontawesome.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/fontawesome/regular.min.css">
@@ -16,6 +16,14 @@
 </head>
 
 <body class="overflow-hidden">
+  <script>
+    // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+    if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      document.documentElement.classList.add('dark')
+    } else {
+      document.documentElement.classList.remove('dark')
+    }
+  </script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
